[fix] specify the z-index of menu and tip

--- a/less/menu.less
+++ b/less/menu.less
@@ -1,5 +1,6 @@
 .menu {
   position: absolute;
+  z-index: 2400;
   left: 0;
   top: 0;
   float: left;
